# flappy-bird

./: .gitignore  CMakeLists.txt  README.md  comprun.sh  makefile
include/: bird.h  entity.h  game.h  pipe.h
src/: bird.cpp  game.cpp  main.cpp  pipe.cpp  test.cpp
